fix(styles): fix layout issues with dialog header when wrapping (#1253)

--- a/packages/styles/dialog.css
+++ b/packages/styles/dialog.css
@@ -50,6 +50,8 @@
   justify-content: space-between;
   min-height: var(--dialog-header-height);
   font-weight: var(--font-weight-bold);
+  padding: var(--space-smallest) 0;
+  gap: var(--space-smallest);
 }
 
 .Dialog__heading,
@@ -73,7 +75,7 @@
   height: var(--dialog-close-button-size);
   width: var(--dialog-close-button-size);
   margin-right: var(--space-smallest);
-  position: relative;
+  flex-shrink: 0;
 }
 
 .Dialog__close:active {
